# hermes-delegate-profile

./: .gitignore  PRODUCT.md  README.md  __init__.py  plugin.yaml  pyproject.toml  router.yaml
.github/workflows/: ci.yml
dashboard/: manifest.json  plugin_api.py
docs/superpowers/specs/: 2026-07-21-capability-router-design.md
router/: __init__.py  adapter.py  blocklist.py  breaker.py  cache.py  classify.py  cli.py  decision_log.py  durable_decision_log.py  one_sidecar.py  rules.py  service.py  signals.py  threshold.py
router/fixtures/: anchors.yaml
scripts/: install_hermes_one_router.py
systemd/: hermes-router-sidecar.service
tests/: conftest.py  test_delegate_profile.py  test_delegate_profile_runtime.py  test_exhaustion.py  test_install_hermes_one_router.py  test_router_integration.py  test_router_nav_cooldowns.js  test_router_nav_writespine.js  test_threshold.py  test_webui_extension.py
tests/router/: test_adapter.py  test_breaker.py  test_classify.py  test_cli.py  test_decision_log.py  test_durable_decision_log.py  test_edge_cases.py  test_one_sidecar.py  test_one_sidecar_e2e.py  test_rules.py  test_service.py  test_shell.py  test_signals.py
webui_extension/capability-router/: console.html  manifest.json  router-nav.css  router-nav.js
