[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "hermes-delegate-profile"
version = "0.3.0"
description = "Hermes Agent plugin: subprocess-isolated cross-profile delegation with capability-based routing"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rodrigo Gomes da Silva", email = "rodrigo.smscom@gmail.com" }]
keywords = ["hermes", "agent", "plugin", "delegation", "subprocess", "capability-routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Make the repo root importable (router.*, delegate_profile_plugin) without an
# editable install. CI runs the bare `pytest` console script, which — unlike
# `python -m pytest` — does not prepend the CWD to sys.path, so without this the
# whole suite fails to collect with ModuleNotFoundError: No module named 'router'.
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".worktrees/*",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"
